[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cscXAI"
version = "0.1.0"
description = "Framework for Visualisation of local explanation fo Chandra Source Classification"
authors = [{name = "kumaran", email = "kumaran@sac.isro.gov.in"}]
requires-python = ">=3.9"
# If your code depends on third‑party libs, list them here:
# dependencies = ["requests>=2.0"]